Fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,8 @@ body {
   .header#case1 {
     background: #91d3c1;
     -webkit-clip-path: none;
-    clip-path: none; }
+    clip-path: none;
+    grid-column: 1 / -1; }
   .header#case2 {
     background: linear-gradient(to right bottom, #fc9d00, #f76400);
     -webkit-clip-path: none;
@@ -374,8 +375,7 @@ body {
         justify-content: space-around; } }
     @media only screen and (max-width: 38em) {
       .header__nav {
-        justify-content: space-around;
-        padding: 2rem; } }
+        justify-content: space-around; } }
   .header__navigation {
     display: flex;
     flex-direction: row; }
@@ -950,25 +950,54 @@ p {
       grid-column: 2 /3;
       grid-row: 1 / 2;
       margin: 0 auto 8rem;
-      position: relative; }
+      position: relative;
+      width: 60vw; }
+      @media only screen and (max-width: 58em) {
+        .survey__charts-1 {
+          width: 80vw; } }
+      @media only screen and (max-width: 38em) {
+        .survey__charts-1 {
+          width: 90vw; } }
     .survey__charts-2 {
       display: grid;
       grid-column: 2 /3;
       grid-row: 2 / 3;
       margin: 0 auto;
-      position: relative; }
+      position: relative;
+      width: 60vw; }
+      @media only screen and (max-width: 58em) {
+        .survey__charts-2 {
+          width: 80vw; } }
+      @media only screen and (max-width: 38em) {
+        .survey__charts-2 {
+          width: 90vw; } }
     .survey__charts-3 {
       display: grid;
       grid-column: 2 /3;
       grid-row: 3 / 4;
       margin: 0 auto;
-      position: relative; }
+      position: relative;
+      width: 60vw; }
+      @media only screen and (max-width: 58em) {
+        .survey__charts-3 {
+          width: 80vw; } }
+      @media only screen and (max-width: 38em) {
+        .survey__charts-3 {
+          width: 90vw; } }
     .survey__charts-4 {
       display: grid;
       grid-column: 2 /3;
       grid-row: 4 / 5;
       margin: 0 auto;
-      position: relative; }
+      position: relative;
+      width: 60vw;
+      padding-top: 4rem; }
+      @media only screen and (max-width: 58em) {
+        .survey__charts-4 {
+          width: 80vw; } }
+      @media only screen and (max-width: 38em) {
+        .survey__charts-4 {
+          width: 90vw; } }
 
 .stories {
   padding-top: 4rem;
@@ -1420,11 +1449,13 @@ p {
   .typography__wrapper {
     margin: 4rem 0 4rem 0;
     display: grid;
-    grid-template-columns: 0.5fr 3fr 3fr 0.5fr; }
+    grid-template-columns: 1fr 4fr 4fr 1fr; }
     @media only screen and (max-width: 54em) {
       .typography__wrapper {
-        grid-template-columns: 1fr 2fr 1fr;
-        grid-template-rows: 1fr 1fr; } }
+        grid-template-columns: 2fr 6fr 2fr; } }
+    @media only screen and (max-width: 38em) {
+      .typography__wrapper {
+        grid-template-columns: 1fr 8fr 1fr; } }
     .typography__wrapper-cormorant {
       grid-column: 2 / 3;
       text-align: center;
@@ -1435,8 +1466,7 @@ p {
       @media only screen and (max-width: 54em) {
         .typography__wrapper-cormorant {
           grid-column: 2 / 3;
-          grid-row: 2 / 3;
-          min-width: 310px; } }
+          grid-row: 2 / 3; } }
       .typography__wrapper-cormorant > h3 {
         font-weight: 100; }
     .typography__wrapper-raleway {
@@ -1449,8 +1479,7 @@ p {
       @media only screen and (max-width: 54em) {
         .typography__wrapper-raleway {
           grid-column: 2 / 3;
-          grid-row: 1 / 2;
-          min-width: 310px; } }
+          grid-row: 1 / 2; } }
       .typography__wrapper-raleway > h3 {
         font-weight: 100; }
 
