--- a/sass/pages/_indiewool.scss
+++ b/sass/pages/_indiewool.scss
@@ -466,13 +466,13 @@ p {
       grid-row: 1 / 2;
       margin: 0 auto 8rem;
       position: relative;
-      // width: 60vw;
-      // @media only screen and (max-width: $bp-medium) {
-      //   width: 80vw;
-      // }
-      // @media only screen and (max-width: $bp-mobile) {
-      //   width: 90vw;
-      // }
+      width: 60vw;
+      @media only screen and (max-width: $bp-medium) {
+        width: 80vw;
+      }
+      @media only screen and (max-width: $bp-mobile) {
+        width: 90vw;
+      }
 
       
       }
@@ -483,14 +483,14 @@ p {
         grid-row: 2 / 3;
         margin: 0 auto;
         position: relative;
-        // width: 60vw;
-        // @media only screen and (max-width: $bp-medium) {
-        //   width: 80vw;
+        width: 60vw;
+        @media only screen and (max-width: $bp-medium) {
+          width: 80vw;
           
-        // }
-        // @media only screen and (max-width: $bp-mobile) {
-        //   width: 90vw;
-        // }
+        }
+        @media only screen and (max-width: $bp-mobile) {
+          width: 90vw;
+        }
         }
   
         &-3 {
@@ -499,14 +499,14 @@ p {
           grid-row: 3 / 4;
           margin: 0 auto;
           position: relative;
-      // width: 60vw;
+      width: 60vw;
           
-      //     @media only screen and (max-width: $bp-medium) {
-      //       width: 80vw;
-      //     }
-      //     @media only screen and (max-width: $bp-mobile) {
-      //       width: 90vw;
-      //     }
+          @media only screen and (max-width: $bp-medium) {
+            width: 80vw;
+          }
+          @media only screen and (max-width: $bp-mobile) {
+            width: 90vw;
+          }
         }
   
         &-4 {
@@ -516,14 +516,14 @@ p {
           
           margin: 0 auto;
           position: relative;
-      // width: 60vw;
-      //     padding-top: 4rem;
-      //     @media only screen and (max-width: $bp-medium) {
-      //       width: 80vw;
-      //     }
-      //     @media only screen and (max-width: $bp-mobile) {
-      //       width: 90vw;
-      //     }
+      width: 60vw;
+          padding-top: 4rem;
+          @media only screen and (max-width: $bp-medium) {
+            width: 80vw;
+          }
+          @media only screen and (max-width: $bp-mobile) {
+            width: 90vw;
+          }
           }
     
     }
@@ -1130,49 +1130,53 @@ p {
   &__wrapper {
     margin: 4rem 0 4rem 0;
     display: grid;
-    grid-template-columns: 0.5fr 3fr 3fr 0.5fr;
+    grid-template-columns: 1fr 4fr 4fr 1fr;
     @media only screen and (max-width: $bp-medium2) {
-      grid-template-columns: 1fr 2fr 1fr;
-      grid-template-rows: 1fr 1fr;
-    }
-
-    &-cormorant {
-      grid-column: 2 / 3;
-      text-align: center;
-      padding: 2rem;
-      font-family: "Cormorant Upright";
-      font-weight: 100;
-      font-size: 2.4rem;
-      @media only screen and (max-width: $bp-medium2) {
+      grid-template-columns: 2fr 6fr 2fr;}
+      @media only screen and (max-width: $bp-mobile) {
+        grid-template-columns: 1fr 8fr 1fr;}
+    
+      &-cormorant {
         grid-column: 2 / 3;
-        grid-row: 2 / 3;
-        min-width: 310px;
-      }
-
-      > h3 {
+        text-align: center;
+        padding: 2rem;
+        font-family: "Cormorant Upright";
         font-weight: 100;
+        font-size: 2.4rem;
+        @media only screen and (max-width: $bp-medium2) {
+          grid-column: 2 / 3;
+          grid-row: 2 / 3;
+          
+        }
+  
+        > h3 {
+          font-weight: 100;
+        }
       }
+  
+      &-raleway {
+        grid-column: 3 / 4;
+        text-align: center;
+        padding: 2rem;
+        font-family: "Raleway";
+        font-weight: 100;
+        font-size: 2.4rem;
+        @media only screen and (max-width: $bp-medium2) {
+          grid-column: 2 / 3;
+          grid-row: 1 / 2;
+          
+        }
+  
+        > h3 {
+          font-weight: 100;
+        }
+      }
+      
     }
 
-    &-raleway {
-      grid-column: 3 / 4;
-      text-align: center;
-      padding: 2rem;
-      font-family: "Raleway";
-      font-weight: 100;
-      font-size: 2.4rem;
-      @media only screen and (max-width: $bp-medium2) {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
-        min-width: 310px;
-      }
-
-      > h3 {
-        font-weight: 100;
-      }
-    }
+    
   }
-}
+
 
 //SOURCES SECTION========================
 .testing {
